--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,9 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jooq.sql-dialect=org.hibernate.dialect.MySQLDialect
 server.port=8080
+
+#upload-file
+path-upload=D:\\Luannv\\MD5\\demoMVC-boot\\src\\main\\resources\\uploads\\
+spring.servlet.multipart.max-file-size=15MB
+spring.servlet.multipart.max-request-size=30MB
+spring.web.resources.static-locations=file:///${path-upload}
